2008-03-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL (MY::postamble): Handle the EU::Depends object $glib
	being undefined gracefully.

	* Makefile.PL: Don't warn about this release being unstable
	because it isn't.

	* copyright.pod: Update for 2008.

2008-03-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.180.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Tell the compiler to always look for headers in '.'
	first so that ours are preferred in case of name
	clashes.  (Suggestion by Daniel Macks in RT #32883)

	* MakeHelper.pm: Add a hyphen to the NAME section of POD
	indices.  (Suggested by Quentin Sculo)

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.174.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Rework the BLIB_DONE stuff to not rely on
	Makefile conditionals.  We should now build fine with any `make´
	again.  Also fix some incorrect and add missing dependencies for
	various documentation files.

2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.173.

2008-01-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Make Glib::Type::list_values return the value of each
	enum/flags entry in addition to the name and nickname.  (Patch by
	Kevin Ryde)

	* t/9.t
	* t/filename.t: Hopefully fix test failures on Windows.

2008-01-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/4.t: Test Glib::Type->list_ancestors and
	Glib::Type->package_from_cname.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.172.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (parse_file): When parsing an #else pre-processor
	directive, make sure we have actually seen and parsed a
	corresponding #if before trying to negate its entry.  This can