@@ -1,5 +1,9 @@
 2008-03-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* Makefile.PL: Remove the no_index specification from EXTRA_META
+	because the YAML implementations currently in use don't seem to
+	support this syntax yet.
+
 	* Makefile.PL (MY::postamble): Handle the EU::Depends object $glib
 	being undefined gracefully.
 
